--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "postinstall": "php artisan storage:link"
+
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
